[gd_scene format=3 uid="uid://v5a5f0p2uw35"]

[ext_resource type="Script" uid="uid://b1ia4ejsruiaq" path="res://scripts/wires.gd" id="1_fqytr"]
[ext_resource type="Texture2D" uid="uid://cvsoryoc4bhfs" path="res://assets/riddles_asset/Cable_bg_asset.png" id="2_xl610"]
[ext_resource type="Texture2D" uid="uid://c1kiuoq8rhpfs" path="res://assets/riddles_asset/Cable_slot_asset.png" id="3_ue6t5"]
[ext_resource type="Texture2D" uid="uid://f2xjnrk3bkrr" path="res://assets/riddles_asset/Blue_left_asset.png" id="4_ag4ka"]
[ext_resource type="Script" uid="uid://cuvtd8u601sis" path="res://scripts/wire.gd" id="5_6atpe"]
[ext_resource type="Texture2D" uid="uid://pasmthxr7xwt" path="res://assets/riddles_asset/Red_left_asset.png" id="6_fn1mj"]
[ext_resource type="Texture2D" uid="uid://byohcvt7h62nu" path="res://assets/riddles_asset/Green_left_asset.png" id="7_n1c3d"]
[ext_resource type="Script" uid="uid://bv4kbgk6mi6qk" path="res://scripts/redslot.gd" id="8_gu52q"]
[ext_resource type="Texture2D" uid="uid://bw0yxcoy0mm55" path="res://assets/riddles_asset/Cable_red_inactive_slot_asset.png" id="9_8lbgw"]
[ext_resource type="Texture2D" uid="uid://b6rexyc875igt" path="res://assets/riddles_asset/Cable_green_inactive_slot_asset.png" id="10_yrda2"]
[ext_resource type="Texture2D" uid="uid://bha277ghbjnve" path="res://assets/riddles_asset/Cable_blue_inactive_slot_asset.png" id="11_57rhe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_escsa"]
size = Vector2(48, 92)

[node name="Wires" type="Node2D" unique_id=2055278583]
script = ExtResource("1_fqytr")

[node name="background" type="Sprite2D" parent="." unique_id=833652485]
position = Vector2(588, 325)
texture = ExtResource("2_xl610")

[node name="slot1" type="Sprite2D" parent="background" unique_id=1461461064]
position = Vector2(-467, -197.5)
texture = ExtResource("3_ue6t5")

[node name="slot2" type="Sprite2D" parent="background" unique_id=1653859433]
position = Vector2(-467, -14.5)
texture = ExtResource("3_ue6t5")

[node name="slot3" type="Sprite2D" parent="background" unique_id=1512443184]
position = Vector2(-467, 178)
texture = ExtResource("3_ue6t5")

[node name="blueWire" type="TextureButton" parent="background" unique_id=1509814434]
anchors_preset = -1
anchor_left = 0.061000004
anchor_top = 0.441
anchor_right = 0.061000004
anchor_bottom = 0.5
offset_left = -525.562
offset_top = -348.824
offset_right = 50.437996
offset_bottom = -313.0
grow_vertical = 2
scale = Vector2(0.05, 1)
mouse_filter = 1
texture_normal = ExtResource("4_ag4ka")
script = ExtResource("5_6atpe")

[node name="redWire" type="TextureButton" parent="background" unique_id=1673886090]
anchors_preset = -1
anchor_left = 0.045
anchor_top = 0.72400004
anchor_right = 0.045
anchor_bottom = 0.83900005
offset_left = -537.89
offset_top = -325.73602
offset_right = 38.109997
offset_bottom = -250.73602
grow_vertical = 2
rotation = -0.2617994
scale = Vector2(0.1, 1)
mouse_filter = 1
texture_normal = ExtResource("6_fn1mj")
script = ExtResource("5_6atpe")

[node name="greenWire" type="TextureButton" parent="background" unique_id=361739278]
anchors_preset = -1
anchor_left = 0.053000003
anchor_top = 0.143
anchor_right = 0.053000003
anchor_bottom = 0.256
offset_left = -521.226
offset_top = -331.952
offset_right = 54.774
offset_bottom = -256.952
grow_vertical = 2
scale = Vector2(0.05, 1)
mouse_filter = 1
texture_normal = ExtResource("7_n1c3d")
script = ExtResource("5_6atpe")

[node name="redslot" type="Area2D" parent="background" unique_id=692927368]
script = ExtResource("8_gu52q")

[node name="redslot" type="Sprite2D" parent="background/redslot" unique_id=1070764343]
position = Vector2(465, -194.5)
texture = ExtResource("9_8lbgw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/redslot" unique_id=1787726457]
position = Vector2(465, -197)
shape = SubResource("RectangleShape2D_escsa")

[node name="greenslot" type="Area2D" parent="background" unique_id=1390083159]

[node name="greenslot" type="Sprite2D" parent="background/greenslot" unique_id=2070799420]
position = Vector2(465, -11.5)
texture = ExtResource("10_yrda2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/greenslot" unique_id=29634128]
position = Vector2(466, -13)
shape = SubResource("RectangleShape2D_escsa")

[node name="blueslot" type="Area2D" parent="background" unique_id=1645882041]

[node name="blueslot" type="Sprite2D" parent="background/blueslot" unique_id=1328457995]
position = Vector2(452, 181)
texture = ExtResource("11_57rhe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/blueslot" unique_id=2119008853]
position = Vector2(451, 181)
shape = SubResource("RectangleShape2D_escsa")

[connection signal="button_down" from="background/blueWire" to="background/blueWire" method="_on_button_down"]
[connection signal="button_up" from="background/blueWire" to="background/blueWire" method="_on_button_up"]
[connection signal="button_down" from="background/redWire" to="background/redWire" method="_on_button_down"]
[connection signal="button_up" from="background/redWire" to="background/redWire" method="_on_button_up"]
[connection signal="button_down" from="background/greenWire" to="background/greenWire" method="_on_button_down"]
[connection signal="button_up" from="background/greenWire" to="background/greenWire" method="_on_button_up"]
[connection signal="mouse_entered" from="background/redslot" to="background/redWire" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="background/redslot" to="background/redWire" method="_on_redslot_mouse_exited"]
[connection signal="mouse_entered" from="background/greenslot" to="background/greenWire" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="background/greenslot" to="background/greenWire" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="background/blueslot" to="background/blueWire" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="background/blueslot" to="background/blueWire" method="_on_mouse_exited"]
